--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 
         <footer>
             © Nikhil P CSE at ATMECE
+            <nav><a href="https://github.com/Nikhil-NP">my github</a></nav>
+            
         </footer>
 
        
